--- a/DN.html
+++ b/DN.html
@@ -120,18 +120,11 @@
       </div> 
       <!-- MEN --> 
 
-      <!-- GIFT SETS --> 
-    <!--  <div class="dropdown">
-        <a href="/gift-sets/gift-sets.html"><button class="dropbtn">GIFT SETS</button></a>
-         <div class="dropdown-content">
-          <a href="/men/cleansers-and-exfoliators.html">Cleansers & Exfoliators</a>
-          <a href="/men/shave.html">Shave</a>
-          <a href="/men/moisturisers.html">Moisturisers</a>
-          <a href="/men/age-control.html">Age Control</a>
-          <a href="/men/body-care.html">Body Care</a>
-        </div> 
-      </div> -->
-      <!-- GIFT SETS --> 
+      <!-- GIFT SETS -->  
+     <div class="dropdown"> 
+       <a href="/gift-sets/gift-sets.html"> <button class="dropbtn">GIFT SETS</button></a>  
+      </div>  
+    <!-- GIFT SETS -->  
     
     
     </div>
